--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-MONGODB_URL = mongodb://localhost/bookworm
-JWT_SECRET = secretkeyhere
+MONGODB_URL=mongodb://localhost/bookworm
+JWT_SECRET=secretkeyhere
+HOST=http://localhost:3000
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=ed7ddd41a7e3f3
+EMAIL_PASS=a19b94a83ae230
